# AstraV2

./: README.md
deploy/: docker-compose.yml
docs/: ADD_NEW_LLM_PROVIDER.md  DISPATCH_FIX.md  OVERRIDE_LLM.md  PER_REQUEST_LLM.md  SLIM_MCP_REFACTOR.md  astra_wiki.md  mcp-authoring-guide.md  planner_service.md
docs/Refactor/: README.md  architecture-diagrams.html  architecture-skill-based-astra.md  astra_skill_architecture.docx
libs/astra-models/: pyproject.toml
libs/astra-models/astra_models/: __init__.py  artifact_models.py  capability_models.py  kind_registry_models.py  skill_models.py
libs/astra_common/: events.py
libs/conductor-core/: pyproject.toml
libs/conductor-core/conductor_core/: __init__.py
libs/conductor-core/conductor_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libs/conductor-core/conductor_core/artifacts/: adapter.py
libs/conductor-core/conductor_core/llm/: base.py  execution_base.py  execution_factory.py  factory.py  polyllm_agent.py  polyllm_exec.py
libs/conductor-core/conductor_core/mcp/: json_utils.py  mcp_client.py
libs/conductor-core/conductor_core/models/: run_models.py
libs/conductor-core/conductor_core/nodes/: capability_executor.py  diagram_enrichment.py  llm_execution.py  mcp_execution.py  mcp_input_resolver.py  narrative_enrichment.py  persist_run.py
libs/conductor-core/conductor_core/protocols/: repositories.py
libs/wheels/: polyllm-0.1.1-py3-none-any.whl
services/artifact-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/artifact-service/app/: config.py  main.py
services/artifact-service/app/models/: kind_registry.py
services/artifact-service/app/routers/: __init__.py  registry_routes.py
services/artifact-service/app/seeds/: bootstrap.py  seed_agile_registry.py  seed_categories.py  seed_data_pipeline_registry.py  seed_kind_registry_cobol_modernization.py  seed_microservices_arch_registry.py  seed_registry.py  seed_registry_raina.py
services/artifact-service/app/services/: registry_service.py
services/astraui-resolver-service/: .env.example  Dockerfile  pyproject.toml
services/astraui-resolver-service/app/: main.py
services/astraui-resolver-service/app/api/: routes.py
services/astraui-resolver-service/app/core/: config.py
services/astraui-resolver-service/app/dal/: component_dal.py
services/astraui-resolver-service/app/db/: mongodb.py
services/astraui-resolver-service/app/models/: component.py
services/capability-onboarding-service/: .env.example  Dockerfile  pyproject.toml
services/capability-onboarding-service/app/: config.py  logging_conf.py  main.py
services/capability-onboarding-service/app/clients/: artifact_client.py  capability_client.py
services/capability-onboarding-service/app/middleware/: __init__.py  cors.py
services/capability-onboarding-service/app/models/: llm_onboarding_models.py  mcp_onboarding_models.py
services/capability-onboarding-service/app/routers/: llm_onboarding_router.py  mcp_onboarding_router.py
services/capability-onboarding-service/app/services/: diagram_templates.py  llm_capability_inferencer.py  llm_inferencer.py  llm_registrar.py  mcp_inspector.py  registrar.py
services/capability-service/: .env.example  Dockerfile  pyproject.toml
services/capability-service/app/: __init__.py  config.py  main.py  mcp_schema.py
services/conductor-service/: .env.example  Dockerfile  pyproject.toml
services/conductor-service/app/: config.py  main.py
services/conductor-service/app/agent/: graph.py
services/conductor-service/app/agent/nodes/: input_resolver.py
services/conductor-service/app/api/routers/: health_routes.py  runs_routes.py
services/conductor-service/app/clients/: artifact_service.py  capability_service.py  http_utils.py  workspace_manager.py
services/conductor-service/app/core/: diff_engine.py  validation.py
services/conductor-service/app/db/: mongodb.py  run_repository.py
services/conductor-service/app/events/: rabbit.py  schemas.py
services/conductor-service/app/infra/: logging.py
services/conductor-service/app/llm/: __init__.py
services/conductor-service/app/secrets/: resolver.py
services/conductor-service/astra_conductor_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/conversation-svc/: .env.example  Dockerfile  README.md  pyproject.toml
services/conversation-svc/app/: config.py  logging_conf.py  main.py
services/planner-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/planner-service/app/: config.py  main.py
services/planner-service/app/agent/: execution_graph.py  planner_agent.py  planner_graph.py  planner_tools.py
services/planner-service/app/agent/nodes/: plan_approved.py  plan_input_resolver.py  session_init.py
services/planner-service/app/api/routers/: health_routes.py  session_routes.py  ws_routes.py
services/planner-service/app/cache/: manifest_cache.py
services/planner-service/app/clients/: artifact_service.py  capability_service.py  workspace_manager.py
services/planner-service/app/db/: mongodb.py  run_repository.py  session_repository.py
services/planner-service/app/events/: capability_consumer.py  rabbit.py  stream.py
services/planner-service/app/infra/: logging.py
services/planner-service/app/llm/: planner_llm.py
services/planner-service/app/models/: session_models.py
services/raina-input-service/: Dockerfile  pyproject.toml
services/raina-input-service/app/: __init__.py  main.py
services/raina-input-service/app/data/: raina_input.json
services/session-svc/: .env.example  Dockerfile  pyproject.toml
services/session-svc/app/: config.py  main.py
services/skill-registry-service/: .env.example  Dockerfile  pyproject.toml
services/skill-registry-service/app/: config.py  logging_conf.py  main.py
services/workspace-manager-service/: .env.example  Dockerfile  pyproject.toml
services/workspace-manager-service/app/: config.py  logging_conf.py  main.py
(+82 files in other folders)
