[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-capability-onboarding-service"
version = "0.1.0"
requires-python = ">=3.11"
description = "Astra Capability Onboarding Service – MCP discovery and capability registration wizard"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "orjson>=3.10",
  "httpx>=0.27",
  # polyllm: LLM inference for capability metadata
  "polyllm @ git+https://github.com/skamble7/platform-libraries.git@polyllm-v0.1.10#subdirectory=libs/polyllm",
  "langchain-openai>=0.2",
  "langchain-google-genai>=2.0",
  # MCP tool discovery (via conductor-core which provides MCPConnection)
  "mcp>=1.15,<2",
  "langchain-mcp-adapters>=0.1.0",
  "langchain-core>=0.3.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
