# services/conductor-service/pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-conductor-service"
version = "0.1.0"
requires-python = ">=3.11"
description = "Astra Conductor Service – LangGraph agent + MCP host"
readme = "README.md"

dependencies = [
  # conductor-core: installed separately (see Dockerfile / dev setup)
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "motor>=3.5",
  "orjson>=3.10",
  "aio-pika>=9.4",
  "httpx>=0.27",
  "jsonschema>=4.22",
  "fastjsonschema>=2.20.0",        # required by adapter; compatible with Python 3.12
  "tenacity>=9.0",
  # polyllm: provider-agnostic LLM client (replaces hand-written provider adapters)
  # Use the base package only; langchain provider SDKs are listed explicitly below
  # to avoid pulling in heavy optional extras (e.g. langchain-aws / boto3).
  "polyllm @ git+https://github.com/skamble7/platform-libraries.git@polyllm-v0.1.10#subdirectory=libs/polyllm",
  "langchain-openai>=0.2",
  "langchain-google-genai>=2.0",
  "langchain-aws>=0.2",
  "langgraph>=0.2",

  # MCP client (official)
  "mcp>=1.15,<2",

  # LangChain MCP adapter (correct module path is `langchain_mcp_adapters`)
  "langchain-mcp-adapters>=0.1.0",

  # Minimal LC core for tool interfaces
  "langchain-core>=0.3.6",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"