# services/planner-service/pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-planner-service"
version = "0.1.0"
requires-python = ">=3.11"
description = "Astra Planner Service – intent-driven planning and execution agent"
readme = "README.md"

dependencies = [
  # conductor-core: installed separately (see Dockerfile / dev setup)
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "websockets>=12.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "motor>=3.5",
  "orjson>=3.10",
  "aio-pika>=9.4",
  "httpx>=0.27",
  "redis>=5.0",
  "langgraph>=0.2",
  "langgraph-checkpoint-mongodb>=0.1",
  "langchain-core>=0.3.6",
  "polyllm @ git+https://github.com/skamble7/platform-libraries.git@polyllm-v0.1.11#subdirectory=libs/polyllm",
  "langchain-openai>=0.2",
  "langchain-google-genai>=2.0",
  "langchain-aws>=0.2",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
