[project]
name = "raina-input-service"
version = "0.2.0"
description = "FastAPI service that returns Raina input JSON for the active project from MongoDB."
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "motor==3.6.0",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E","F","I","UP"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"